--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -27,7 +27,10 @@
                 {% if app.user %}
                     <a href="{{ path('project_index') }}">Заявки</a>
                     {% if app.user.type == "LittleBoss" %}
-					<a href="{{ path('project_executioner') }}">Заявки Подизпълнител</a>
+                        <a href="{{ path('project_designer', {'username':'yoana'}) }}">Заявки Йоана</a>
+                        <a href="{{ path('project_designer', {'username':'a.vali'}) }}">Заявки Вали</a>
+                        <a href="{{ path('project_designer', {'username':'r.dudley'}) }}">Заявки Рената</a>
+					    <a href="{{ path('project_executioner') }}">Заявки Подизпълнител</a>
 					{% endif %}			
                     <a href="{{ path('project_archive') }}">Архивирани Заявки</a>
 					{% if app.user.username == "a.vali" %}
